<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_fullscreen_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />


    <ImageView
        android:id="@+id/img_world_cup_trophy"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="136dp"
        android:contentDescription="@string/contest_description"
        android:src="@drawable/img_world_cup_trophy_2018" />

    <TextView
        android:id="@+id/text_world_cup_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_world_cup_trophy"
        android:layout_centerHorizontal="true"
        android:text="@string/world_cup_date"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="200dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:text="@string/play"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-8dp"
        android:indeterminate="true"
        android:indeterminateDuration="10000"
        android:visibility="gone"/>

</RelativeLayout>